# SaltedFishBot-Rust

./: .gitignore  Cargo.toml  README.md  strings.toml  test.toml
src/: lib.rs  main.rs  strings.rs
src/config/: mod.rs
src/telegram/: api.rs  mod.rs
