[package]
name = "salted_fish_bot"
version = "0.1.0"
authors = ["Kay <redl0tus@noreply.github.com>"]

[dependencies]
env_logger = "~0.5.6"
telegram-bot = "~0.6"
log = { version = "~0.4.0", features = ["max_level_debug", "release_max_level_warn"] }
clap = "~2.31.2"
toml = "~0.4"
serde = "~1.0.37"
serde_derive = "~1.0.37"