[package]
name = "salted_fish_bot"
version = "0.1.0"
authors = ["Kay <redl0tus@noreply.github.com>"]

[dependencies]
log = { version = "~0.4.0", features = ["max_level_debug", "release_max_level_warn"] }
clap = "~2.31.2"
toml = "~0.4"
hyper = "0.11"
serde = "~1.0.37"
futures = "~0.1"
tokio-core = "~0.1.16"
env_logger = "~0.5.6"
serde_json = "~1.0"
hyper-rustls = "~0.12.0"
serde_derive = "~1.0.37"